o) Add Client SSL Support
o) Add user shedding
o) Add new channel modes:
o) +R - Cannot join channel unless regisitered with NickServ
o) +M - Cannot talk on channel unless registered with NickServ
o) +S - Cannot join channel unless using SSL

-- ircd-hybrid-8beta2 Release Notes
o) channel::disable_fake_channels now also disables ascii 29 (mIRC italic)
   when set to yes

-- ircd-hybrid-8beta1 Release Notes
o) Implemented full services support. Among other things, the following changes
   have been done for this:
   - Added SVSNICK, and SVSMODE command handlers
   - Added service stamps to NICK/UID messages
   - Added SVS to server capabilities (CAPAB). SVS capable servers can
     deal with extended NICK/UID messages that contain service IDs/stamps.
   - Usermode +r (registered nick) has been added, as well as
     channelmode +r (registered channel)
   - Now that usermode +r has a different function than before, rejected
     client notices now go to new usermode +j
   - Various services shortcuts have been added (/NS, /CS, /NICKSERV, /CHANSERV, etc.)
   - Added channelmode +R (only registered clients may join that channel)
   - Added usermode +R (only registered clients may send a private message)
   - Added services{} block to ircd.conf
   - Added services_name directive to general{} block
   - Added GLOBOPS mainly for services compatibility, but can be used by operators, too
o) RKLINE and RXLINE commands have been removed. Regular expression based
   bans should only be added via ircd.conf
o) Added 'globops', 'restart', 'dline', 'undline' and 'module' operator privilege flags.
   Read doc/example.conf for further explanation of what these flags
   are supposed to be doing
o) Idle-time klines have been removed
o) Cleaned up modules API. Old modules won't work anymore
o) Remove general::burst_away configuration directive. AWAY bursts are now
   controlled via connect::flags explicitly
o) Introduced new logging subsystem including log rotation based on